--- a/c_broken/C.vcxproj.filters
+++ b/c_broken/C.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Q3003.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Q10798.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
