--- a/c_broken/C.vcxproj.filters
+++ b/c_broken/C.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="Q11718.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Q2869.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
