--- a/c_broken/C.vcxproj
+++ b/c_broken/C.vcxproj
@@ -135,6 +135,7 @@
     <ClInclude Include="Q10798.h" />
     <ClInclude Include="Q11005.h" />
     <ClInclude Include="Q2745.h" />
+    <ClInclude Include="Q2869.h" />
     <ClInclude Include="Q3003.h" />
     <ClInclude Include="Q33990.h" />
   </ItemGroup>
