--- a/c_broken/C.vcxproj.filters
+++ b/c_broken/C.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="Q2869.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Q5086.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
