--- a/c_broken/C.vcxproj.filters
+++ b/c_broken/C.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClInclude Include="Q5086.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Q2501.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
