--- a/c_broken/C.vcxproj
+++ b/c_broken/C.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="main.c" />
     <ClCompile Include="Q25206.h" />
+    <ClCompile Include="Q4999.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Q1018.h" />
@@ -144,6 +145,7 @@
     <ClInclude Include="Q2745.h" />
     <ClInclude Include="Q2869.h" />
     <ClInclude Include="Q3003.h" />
+    <ClInclude Include="Q30087.h" />
     <ClInclude Include="Q3009.h" />
     <ClInclude Include="Q33990.h" />
     <ClInclude Include="Q5086.h" />
