--- a/c_broken/C.vcxproj
+++ b/c_broken/C.vcxproj
@@ -133,10 +133,12 @@
   <ItemGroup>
     <ClInclude Include="Q1018.h" />
     <ClInclude Include="Q1085.h" />
+    <ClInclude Include="Q11650.h" />
     <ClInclude Include="Q11718.h" />
     <ClInclude Include="Q10798.h" />
     <ClInclude Include="Q11005.h" />
     <ClInclude Include="Q15894.h" />
+    <ClInclude Include="Q1934.h" />
     <ClInclude Include="Q19532.h" />
     <ClInclude Include="Q1978.h" />
     <ClInclude Include="Q2501.h" />
