--- a/c_broken/C.vcxproj.filters
+++ b/c_broken/C.vcxproj.filters
@@ -1,100 +1,35 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="소스 파일">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="헤더 파일">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="리소스 파일">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
+    <ClCompile Include="main.c" />
+    <ClCompile Include="Q25206.h" />
+    <ClCompile Include="Q4999.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Q25206.h">
-      <Filter>헤더 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Q4999.h">
-      <Filter>헤더 파일</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Q3003.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Q10798.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Q2745.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Q11005.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Q33990.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Q11718.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Q2869.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Q5086.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Q2501.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Q1978.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Q2581.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Q1085.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Q3009.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Q15894.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Q9063.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Q19532.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Q1018.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-<<<<<<< HEAD
-    <ClInclude Include="Q30087.h">
-=======
-    <ClInclude Include="Q11650.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Q1934.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Q13241.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Q1735.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Q2485.h">
->>>>>>> 1bcc1b5d4a2a4b930a04e10956ef1921d2e5b814
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
+    <ClInclude Include="Q1018.h" />
+    <ClInclude Include="Q1085.h" />
+    <ClInclude Include="Q11650.h" />
+    <ClInclude Include="Q11718.h" />
+    <ClInclude Include="Q10798.h" />
+    <ClInclude Include="Q11005.h" />
+    <ClInclude Include="Q13241.h" />
+    <ClInclude Include="Q15894.h" />
+    <ClInclude Include="Q1735.h" />
+    <ClInclude Include="Q1934.h" />
+    <ClInclude Include="Q19532.h" />
+    <ClInclude Include="Q1978.h" />
+    <ClInclude Include="Q2485.h" />
+    <ClInclude Include="Q2501.h" />
+    <ClInclude Include="Q2581.h" />
+    <ClInclude Include="Q2745.h" />
+    <ClInclude Include="Q2869.h" />
+    <ClInclude Include="Q3003.h" />
+    <ClInclude Include="Q30087.h" />
+    <ClInclude Include="Q3009.h" />
+    <ClInclude Include="Q33990.h" />
+    <ClInclude Include="Q5086.h" />
+    <ClInclude Include="Q9063.h" />
+    <ClInclude Include="Q4134.h" />
+    <ClInclude Include="Q20492.h" />
   </ItemGroup>
 </Project>
