--- a/c_broken/C.vcxproj
+++ b/c_broken/C.vcxproj
@@ -133,6 +133,7 @@
   <ItemGroup>
     <ClInclude Include="Q1018.h" />
     <ClInclude Include="Q1085.h" />
+    <ClInclude Include="Q10874.h" />
     <ClInclude Include="Q11650.h" />
     <ClInclude Include="Q11718.h" />
     <ClInclude Include="Q10798.h" />
