--- a/c_broken/C.vcxproj
+++ b/c_broken/C.vcxproj
@@ -138,6 +138,7 @@
     <ClInclude Include="Q11718.h" />
     <ClInclude Include="Q10798.h" />
     <ClInclude Include="Q11005.h" />
+    <ClInclude Include="Q1271.h" />
     <ClInclude Include="Q13241.h" />
     <ClInclude Include="Q15740.h" />
     <ClInclude Include="Q15894.h" />
