--- a/c_broken/C.vcxproj.filters
+++ b/c_broken/C.vcxproj.filters
@@ -95,5 +95,8 @@
     <ClInclude Include="Q10874.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Q1271.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
